; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_path.c_mp_path_join.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_path.c_mp_path_join.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mp_path_join(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @bstr0(i8* %8)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @bstr0(i8* %10)
  %12 = call i8* @mp_path_join_bstr(i8* %7, i32 %9, i32 %11)
  ret i8* %12
}

declare dso_local i8* @mp_path_join_bstr(i8*, i32, i32) #1

declare dso_local i32 @bstr0(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
